Archive2/12/678424382a3e35/output
main.cpp:9:11: error: comparison of integers of different signs: 'const unsigned long long' and 'const int' [-Werror,-Wsign-compare]
    if (a != b) {
        ~ ^  ~
main.cpp:21:2: note: in instantiation of function template specialization 'assert_eq<unsigned long long, int>' requested here
        ASSERT_EQ(y, 123);
        ^
main.cpp:5:25: note: expanded from macro 'ASSERT_EQ'
#define ASSERT_EQ(a, b) assert_eq(a, b, __FILE__, __LINE__)
                        ^
1 error generated.
